# experiments

./: .gitignore  README.md  args.py  clustering_pipeline.py  experiment_pipeline.py  prompt_scoring_alice.py  pyproject.toml  run_alice_instance.sh  run_alice_prompt_2way.sh  run_alice_prompt_3way.sh  run_asap_instance.sh  scoring_pipeline.py
clustering/: BERT-topic-modeling.py  cluster_labeling.py  clustering_engine.py  clustering_evaluator.py  clustering_util.py
data/ASAP/: split_asap.py
data/data_utils/: data_reader.py
evalutaion/: evaluate_all.py  evaluate_results.py  extrinsic_metrics.py
normalization/: nomalization.py
scoring/: scoring_utils.py  train_bert.py  train_classical.py
